# iced_lucide

./: .gitattributes  .gitignore  Cargo.toml  README.md
all_icons_example/: Cargo.toml  build.rs
all_icons_example/src/: main.rs
all_icons_example/src/fonts/: my-icons.rs
example/: Cargo.toml  build.rs
example/fonts/: my-icons.toml
src/: lib.rs
subset_example/: Cargo.toml  build.rs
subset_example/fonts/: my-icons.toml
subset_example/src/: main.rs
